fix images overlapping menu

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -6,6 +6,7 @@
   line-height: 22px;
   letter-spacing: 2px;
   overflow: auto;
+  z-index: 1;
 
   &__top {
     margin-bottom: 32px;
